webadmin: fixed vNIC widget in add/edit VM dialog
PatternFly patch caused vNIC widget in add/edit VM dialog to
have a misaligned label. Fixed.

Bug-Url: https://bugzilla.redhat.com/1096845

--- a/packaging/branding/ovirt.brand/patternfly-custom-hacks.css
+++ b/packaging/branding/ovirt.brand/patternfly-custom-hacks.css
@@ -122,7 +122,7 @@ label {
     padding-left: 5px;
 }
 
-.pite_content_pfly_fix span.avw_label_pfly_fix {
+.pite_content_pfly_fix span.avw_label_pfly_fix, .pite_content_pfly_fix label.avw_label_pfly_fix {
     position: relative !important;
     top: 6px !important;
 }
